# Weather

./: .gitignore  CMakeLists.txt  README.md  Weather.cpp  Weather.h  Weather.ui  WeatherTool.h  WeatherUtils.cpp  WeatherUtils.h  main.cpp  ui_Weather.h
images/: images.qrc
weatherIcons/: weatypeico.qrc
